create a user login page

--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,16 @@
 <body>
     <!-- for including different templates -->
     {%include 'navbar.html'%}
-    
+
+    <!--For showing flash messages-->
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li>{{ message }}</li>
+            {% endfor %}
+    </ul>
+    {% endif %}
+
     {% block content %}
 
     {% endblock %}
