--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,6 +7,14 @@
     <input type="text" name="q" placeholder="Search Rooms..."/>
 </form>
 
-<!---->
+{% if request.user.is_authenticated%}
+<!--for logout  -->
+<a href="{% url 'logout' %}">Logout</a>
+
+{%else%}
+
+<!--for login  -->
 <a href="{% url 'login' %}">Login</a>
+
+{% endif %}
 <hr>
