--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -2,6 +2,9 @@
 
 {% block content%}
 
+
+{% if page == 'login' %}
+<!--login form-->
 <div>
     <form method="POST" action="">
         {%csrf_token%}
@@ -13,6 +16,24 @@
 
         <input type="submit" value="Login"/>
     </form>
+
+    <p>Haven't signed up yet?</p>
+    <a href="{% url 'register' %}">Sing up</a>
 </div>
 
+{% else %}
+
+<!--registration form-->
+<div>
+    <form method="POST" action="">
+        {%csrf_token%}
+        {{form.as_p}}
+        <input type="submit" value="Register"/>
+    </form>
+
+    <p>Already signed up yet?</p>
+    <a href="{% url 'login' %}">Login </a>
+</div>
+
+{% endif %}
 {% endblock content%}
