--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -4,7 +4,7 @@
 <style>
     .home-container{
         display: grid;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 1fr 3fr 1fr;
     }
 </style>
 
@@ -12,43 +12,25 @@
 <div class="home-container">
 <!--side bar-->
  <div>
-    <h3>Browse Topics</h3>
-    <hr>
+    {% include 'base/topic_component.html '%}
+ </div>
 
     <div>
-        <a href="{% url 'home' %}">All</a>
-    </div>
 
-    {% for topic in topics %}
+        <h5>{{room_count}} rooms available </h5>
+
+    <!-- for room creation-->
+    <a href="{% url 'create-room'%}">Create Room</a>
+
+
     <div>
-        <a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
+        {%include 'base/feed_component.html'%}
     </div>
-    {%endfor%}
- </div>
+    </div>
 
- <div>
+    <div >
+       {% include 'base/activity_component.html' %}
+    </div>
 
-    <h5>{{room_count}} rooms available </h5>
-
- <!-- for room creation-->
- <a href="{% url 'create-room'%}">Create Room</a>
-
-
- <div>
-     {% for room in rooms %}
-     <div>
-        {%if request.user == room.host %}
-         <a href="{% url 'update-room' room.id%}">Edit</a>
-         <a href="{% url 'delete-room' room.id%}">Delete</a>
-        {%endif%}
-
-         <span>@{{room.host.username}}</span>
-         <h5>{{room.id}}--<a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
-         <small>{{room.topic.name}}</small>
-         <hr>
-     </div>
-     {% endfor%}
- </div>
- </div>
 </div>
 {% endblock content%}
