adding static files and root. Changing the view of room creation

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
+<!-- then I can use static tag-->
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- include css stylesheet-->
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css'%}">
     <title>StudyBuddy</title>
 </head>
 <body>
@@ -18,6 +24,8 @@
             {% endfor %}
     </ul>
     {% endif %}
+
+    <img src="{% static 'images/anime.jpg'%}">
 
     {% block content %}
 
