--- a/templates/main.html
+++ b/templates/main.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<!-- then I can use static tag-->
-{% load static %}
-
+{%load static%}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+    <title>StudyBuddy - Find study partners around the world!</title>
+  </head>
 
-    <!-- include css stylesheet-->
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css'%}">
-    <title>StudyBuddy</title>
-</head>
-<body>
-    <!-- for including different templates -->
+  <body>
+   
     {%include 'navbar.html'%}
 
     <!--For showing flash messages-->
@@ -24,11 +22,11 @@
             {% endfor %}
     </ul>
     {% endif %}
-
-    <img src="{% static 'images/anime.jpg'%}">
-
+    
     {% block content %}
 
     {% endblock %}
-</body>
+
+    <script src="{%static 'js/script.js'%}"></script>
+  </body>
 </html>
