--- a/base/templates/base/update-user.html
+++ b/base/templates/base/update-user.html
@@ -18,7 +18,8 @@
                     </div>
                 </div>
                 <div class="layout__body">
-                    <form class="form" action="" method="POST">
+                    <!--for submiting with this form-->
+                    <form class="form" action="" method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
 
                         {% for field in form%}
